# sbx

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  config.yaml  pyproject.toml  pyrightconfig.json
.cursor/rules/: project-briefing.mdc
sbx/: __init__.py  cli.py  config_loader.py  install.py  models.py  profile_generator.py
sbx/profiles/: app.toml  app.yaml  base.toml  base.yaml  executables.toml  file-full.toml  file-full.yaml  gui.toml  gui.yaml  julia.toml  online.toml  online.yaml  uv_tools.toml  uv_tools.yaml
