[project]
name = "sbx"
version = "0.1.0"
description = "A wrapper around Mac's sandbox-exec with TOML-based profiles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli>=2.0.0; python_version<'3.11'",
    "importlib-resources>=5.0.0; python_version<'3.9'",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
]

[project.scripts]
sbx = "sbx.cli:main"
sb = "sbx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbx"]

[dependency-groups]
dev = ["basedpyright>=1.32.1", "pyupgrade>=3.21.0", "ruff>=0.14.4"]
